error fix and code formatting

--- a/mqtt_publisher/Dockerfile
+++ b/mqtt_publisher/Dockerfile
@@ -8,11 +8,11 @@ COPY . .
 RUN rm -rf venv
 RUN python3 -m venv venv
 RUN . venv/bin/activate
+
 RUN pip install --upgrade pip
 RUN pip install --upgrade pip setuptools
 RUN pip install -r requirements.txt
 
 
-EXPOSE 8000
 
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "mqtt_publisher.py"]
