--- a/mqtt_receiver/Dockerfile
+++ b/mqtt_receiver/Dockerfile
@@ -5,6 +5,7 @@ FROM python:3.9-slim
 WORKDIR /app
 
 COPY . .
+
 RUN rm -rf venv
 RUN python3 -m venv venv
 RUN . venv/bin/activate
@@ -12,7 +13,4 @@ RUN pip install --upgrade pip
 RUN pip install --upgrade pip setuptools
 RUN pip install -r requirements.txt
 
-
-EXPOSE 8000
-
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "mqtt_receiver.py"]
