--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,18 @@ services:
       - "8000:8000"
     network_mode: "host"
 
+  mqtt-publisher:
+    image: mqtt-publisher:latest
+    depends_on:
+      - mosquitto
+    network_mode: "host"
+
+  mqtt-receiver:
+    image: mqtt-receiver:latest
+    depends_on:
+      - mosquitto
+      - mqtt-publisher
+    network_mode: "host"
+
+
+
