--- a/mqtt_receiver/Dockerfile
+++ b/mqtt_receiver/Dockerfile
@@ -1,16 +1,15 @@
 
 
+FROM ubuntu:latest
 FROM python:3.9-slim
 
 WORKDIR /app
 
 COPY . .
-
+RUN python -m pip install --upgrade pip
 RUN rm -rf venv
-RUN python3 -m venv venv
+RUN python -m venv venv
 RUN . venv/bin/activate
-RUN pip install --upgrade pip
-RUN pip install --upgrade pip setuptools
 RUN pip install -r requirements.txt
 
 CMD ["python", "mqtt_receiver.py"]
