--- a/mqtt_receiver/requirements.txt
+++ b/mqtt_receiver/requirements.txt
@@ -10,7 +10,7 @@ fastapi==0.103.1
 h11==0.14.0
 idna==3.4
 paho-mqtt==1.6.1
-pydantic==2.3.0
+pydantic
 pydantic_core==2.6.3
 pymongo==4.4.1
 redis==5.0.0
@@ -21,3 +21,4 @@ starlette==0.27.0
 typing_extensions==4.7.1
 urllib3==2.0.4
 uvicorn==0.23.2
+python-dotenv
