--- a/fast_api/Dockerfile
+++ b/fast_api/Dockerfile
@@ -1,15 +1,11 @@
 
 
-FROM ubuntu:latest
-FROM python:3.8-slim
+FROM python:3.9-slim
 
 WORKDIR /app
-
+RUN python3.9 -m pip install pip --upgrade
 COPY . .
-RUN python -m pip install --upgrade pip
-RUN rm -rf venv
-RUN python -m venv venv
-RUN . venv/bin/activate && pip install -r requirements.txt
+RUN pip install -r requirements.txt
 
 
 EXPOSE 8000
