--- a/mqtt_publisher/Dockerfile
+++ b/mqtt_publisher/Dockerfile
@@ -1,16 +1,11 @@
 
-
-FROM ubuntu:latest
 FROM python:3.9-slim
 
 WORKDIR /app
 
+RUN python3.9 -m pip install pip --upgrade
 COPY . .
 
-RUN python3 -m pip install --upgrade pip
-RUN rm -rf venv
-RUN python -m venv venv
-RUN . venv/bin/activate
 RUN pip install -r requirements.txt
 
 
