--- a/mqtt_receiver/Dockerfile
+++ b/mqtt_receiver/Dockerfile
@@ -1,15 +1,10 @@
 
 
-FROM ubuntu:latest
 FROM python:3.9-slim
 
 WORKDIR /app
-
+RUN python3.9 -m pip install pip --upgrade
 COPY . .
-RUN python -m pip install --upgrade pip
-RUN rm -rf venv
-RUN python -m venv venv
-RUN . venv/bin/activate
 RUN pip install -r requirements.txt
 
 CMD ["python", "mqtt_receiver.py"]
